docs/v4.0.0/_sources/gallery/extras/HG01.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/extras/HG01.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_extras_HG01.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_extras_HG01.py:


Hermite-Gauss 01 Mode Detector
==============================

This example demonstrates the initialization and visualization of HG01 Mode detector using PyMieSim.

.. GENERATED FROM PYTHON SOURCE LINES 9-10

Importing the package: PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 10-26

.. code-block:: Python

    from PyMieSim.units import ureg

    from PyMieSim.single.detector import CoherentMode
    from PyMieSim.single import SystemPlotter

    detector = CoherentMode(
        mode_number="HG01",  # Specifying LP01 mode
        sampling=500 * ureg.AU,  # Number of sampling points
        NA=0.5 * ureg.AU,  # Numerical Aperture
        rotation=0 * ureg.degree,  # Rotation angle
        gamma_offset=0 * ureg.degree,  # Gamma offset
        phi_offset=40 * ureg.degree,  # Phi offset in degrees
    )

    plotter = SystemPlotter()
    plotter.plot(detector)



.. image-sg:: /gallery/extras/images/sphx_glr_HG01_001.png
   :alt: HG01
   :srcset: /gallery/extras/images/sphx_glr_HG01_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <pyvista.plotting.plotter.Plotter object at 0x7f151c66ef90>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.618 seconds)


.. _sphx_glr_download_gallery_extras_HG01.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: HG01.ipynb <HG01.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: HG01.py <HG01.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: HG01.zip <HG01.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
